--- a/deployment.yml
+++ b/deployment.yml
@@ -1,5 +1,5 @@
-kind: Deployment
 apiVersion: apps/v1
+kind: Deployment
 metadata: 
   name: nginx-deployment
   namespace: nginx
@@ -19,6 +19,13 @@ spec:
         image: nginx:latest
         ports:
         - containerPort: 80
+        resources:
+          requests:
+            cpu: 100m
+            memory: 128Mi
+          limits:
+            cpu: 200m
+            memory: 256Mi
         volumeMounts:
         - mountPath: /var/www/html
           name: my-volume
